tests/NormalTests/paczka1/small_fuzzy/56369546.err
Error in line 9: AKZ3wu9h S682 95,0
Error in line 12: S111 S115 73,7
